--- a/HRAttendance/HRAttendance/bin/HRAttendance.dll.config
+++ b/HRAttendance/HRAttendance/bin/HRAttendance.dll.config
@@ -20,6 +20,12 @@
 	<authentication mode="Forms">
 		<forms loginUrl="~/Account/Login" timeout="300" cookieless="UseCookies" requireSSL="true" cookieSameSite="Lax" />
 	</authentication>
+	  <roleManager defaultProvider="userRoleProvider" enabled="true">
+		  <providers>
+			  <clear />
+			  <add name="userRoleProvider" type="HRAttendance.Models.UserRoleProvider" />
+		  </providers>
+	  </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
