--- a/HRAttendance/HRCommon/HRCommon.csproj
+++ b/HRAttendance/HRCommon/HRCommon.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Enums\eEmployeeCol.cs" />
     <Compile Include="Exceptions\AppException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CommonEnum.cs" />
     <Compile Include="Utils\CypherAndHashManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
