--- a/HRAttendance/HRAttendance/HRAttendance.csproj
+++ b/HRAttendance/HRAttendance/HRAttendance.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LeavesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -145,10 +146,18 @@
     <Compile Include="Models\Employee\Response\ResDeleteEmployeeInfo.cs" />
     <Compile Include="Models\Employee\Response\ResGetEmployeeInfocs.cs" />
     <Compile Include="Models\Employee\Response\ResGetEmployeeInfoList.cs" />
+    <Compile Include="Models\Leave\LeaveInfo.cs" />
+    <Compile Include="Models\Leave\Request\ReqRequestLeaveInfo.cs" />
+    <Compile Include="Models\Leave\Response\ResRequestLeaveInfo.cs" />
     <Compile Include="Models\Role\Response\ResUserRoleInfo.cs" />
     <Compile Include="Models\Shift\ShiftInfo.cs" />
     <Compile Include="Models\UserRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Attendance\AttendanceRex.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AttendanceRex.resx</DependentUpon>
+    </Compile>
     <Compile Include="Resources\Common\Common.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -169,6 +178,7 @@
     <Compile Include="Services\BaseServices.cs" />
     <Compile Include="Services\EmployeeServices.cs" />
     <Compile Include="Services\RoleServices.cs" />
+    <Compile Include="Utils\AttendanceHelper.cs" />
     <Compile Include="Utils\CommonEnums.cs" />
     <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\DataAccessHelper.cs" />
@@ -544,6 +554,9 @@
     <Content Include="Views\Shared\_JSResourcesPartialView.cshtml" />
     <Content Include="Views\Employee\EmployeeRegisterDlg.cshtml" />
     <Content Include="Views\Attendance\Index.cshtml" />
+    <Content Include="Views\Attendance\_EmpAttendanceView.cshtml" />
+    <Content Include="Views\Leaves\Index.cshtml" />
+    <Content Include="Views\Leaves\_EmpLeaveView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Base\" />
@@ -586,6 +599,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Attendance\AttendanceRex.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AttendanceRex.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Common\Common.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Common.Designer.cs</LastGenOutput>
