--- a/HRAttendance/HRCommon/HRCommon.csproj
+++ b/HRAttendance/HRCommon/HRCommon.csproj
@@ -41,11 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\eEmployeeCol.cs" />
     <Compile Include="Exceptions\AppException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CommonEnum.cs" />
     <Compile Include="Utils\CypherAndHashManager.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Enums\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
